--- a/app/src/main/res/layout/detail_client.xml
+++ b/app/src/main/res/layout/detail_client.xml
@@ -1,162 +1,249 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewDetailClient"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detail_client"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableLayout
+        style="@style/AppStyle"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/formulaireDetailClient"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/textViewDetailClient"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
+        <TableRow
+            android:layout_marginVertical="24dp">
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/entreprise"/>
-
-            <EditText
-                android:id="@+id/saisieNom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/adresse_client" />
-
-            <EditText
-                android:id="@+id/saisieAdresse"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/description" />
-
-            <EditText
-                android:id="@+id/Description"
-                android:layout_width="match_parent"
-                android:inputType="textMultiLine"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/coordonnees" />
-
-            <TextView
-                android:id="@+id/coordonnees"
-                android:layout_width="match_parent"
-                android:inputType="textMultiLine"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/prenom_contact" />
-
-            <EditText
-                android:id="@+id/prenomContact"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/nom_contact" />
-
-            <EditText
-                android:id="@+id/nomContact"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/tel_contact" />
-
-            <EditText
-                android:id="@+id/telephone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:id="@+id/ClientProspect"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <RadioButton
-                    android:id="@+id/client"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/textViewDetailClient"
                     android:layout_width="wrap_content"
-                    android:text="@string/client"
-                    android:checked="true"
-                    android:layout_height="wrap_content" />
-                <RadioButton
-                    android:id="@+id/propspect"
-                    android:layout_width="wrap_content"
-                    android:text="@string/prospect"
-                    android:layout_height="wrap_content"/>
-            </RadioGroup>
-        </LinearLayout>
-    </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_span="2"
+                    android:text="@string/detail_client"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </TableRow>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/formulaireDetailClient"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-        <Button
-            android:id="@+id/boutonRetour"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="304dp"
-            android:text="@string/retour" />
-        <Button
-            android:id="@+id/obtenirCoordonnees"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="obtenirCoordonnees"
-            android:layout_marginBottom="304dp"
-            android:text="@string/obtenir_coordonnees" />
-        <Button
-            android:id="@+id/boutonModifier"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="304dp"
-            android:text="@string/valider" />
-    </LinearLayout>
+        <TableRow
+            android:layout_marginVertical="@dimen/detail_client_marge_verticale_champs_texte">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nom_entreprise"
+                    android:textSize="@dimen/detail_client_taille_titres" />
+                <EditText
+                    android:id="@+id/saisieNom"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/indication_entreprise"
+                    android:maxLines="1"
+                    android:maxLength="50" />
+            </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:text="@string/description"
+                    android:textSize="@dimen/detail_client_taille_titres" />
+                <EditText
+                    android:id="@+id/Description"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:hint="@string/indication_description"
+                    android:inputType="textMultiLine"
+                    android:layout_height="wrap_content"
+                    android:maxLength="500" />
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginVertical="@dimen/detail_client_marge_verticale_champs_texte">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:text="@string/adresse_entreprise"
+                    android:textSize="@dimen/detail_client_taille_titres" />
+                <EditText
+                    android:id="@+id/saisieAdresse"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/indication_adresse"
+                    android:enabled="false"
+                    android:maxLines="3"
+                    android:maxLength="300" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="bottom">
+                <Button
+                    android:id="@+id/obtenirCoordonnees"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/bouton_secondaire"
+                    android:text="@string/obtenir_coordonnees" />
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginVertical="@dimen/detail_client_marge_verticale_champs_texte">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:text="@string/prenom_contact"
+                    android:textSize="@dimen/detail_client_taille_titres" />
+                <EditText
+                    android:id="@+id/prenomContact"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/indication_prenom_contact"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:maxLength="50" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nom_contact"
+                    android:textSize="@dimen/detail_client_taille_titres" />
+                <EditText
+                    android:id="@+id/nomContact"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/indication_nom_contact"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:maxLength="50" />
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginVertical="@dimen/detail_client_marge_verticale_champs_texte">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tel_contact"
+                    android:textSize="@dimen/detail_client_taille_titres" />
+                <EditText
+                    android:id="@+id/telephone"
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/indication_telephone"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:maxLength="12" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center">
+                <RadioGroup
+                    android:layout_width="@dimen/detail_client_largeur_champs"
+                    android:id="@+id/clientProspect"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <RadioButton
+                        android:id="@+id/client"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/detail_client_marge_radios"
+                        android:text="@string/client"
+                        android:textSize="@dimen/detail_client_texte_radios"
+                        android:checked="true" />
+                    <RadioButton
+                        android:id="@+id/prospect"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="@dimen/detail_client_marge_radios"
+                        android:text="@string/prospect"
+                        android:textSize="@dimen/detail_client_texte_radios" />
+                </RadioGroup>
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginVertical="28dp">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/boutonRetour"
+                    android:layout_width="@dimen/detail_client_largeur_boutons"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/bouton_secondaire"
+                    android:text="@string/retour"
+                    android:textSize="@dimen/detail_client_taille_texte_boutons" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/boutonModifier"
+                    android:layout_width="@dimen/detail_client_largeur_boutons"
+                    android:layout_height="wrap_content"
+                    android:text="@string/valider"
+                    android:textSize="@dimen/detail_client_taille_texte_boutons"
+                    android:enabled="false" />
+            </LinearLayout>
+        </TableRow>
+    </TableLayout>
+</LinearLayout>
