--- a/app/src/main/res/layout/carte.xml
+++ b/app/src/main/res/layout/carte.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,5 +51,5 @@
         android:textColor="@android:color/white"
         android:elevation="8dp"
         android:padding="10dp"
-        android:visibility="visible" />
+        android:visibility="gone" />
 </FrameLayout>
