--- a/app/src/main/res/layout/liste_client.xml
+++ b/app/src/main/res/layout/liste_client.xml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:text="@string/entreprise"
+                android:text="@string/nom_entreprise_liste"
                 android:textSize="@dimen/texte_defaut"
                 android:textColor="@color/dark_blue" />
             <TextView
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:text="@string/adresseClient"
+                android:text="@string/adresse_entreprise_liste"
                 android:textSize="@dimen/texte_defaut"
                 android:textColor="@color/dark_blue" />
             <TextView
